[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/png/playerShip2_orange.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]

[node name="Player" type="RigidBody2D"]
can_sleep = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -2.06282, -18.6863, 1.82626, -18.5095, 5.71535, -8.7868, 27.4589, 2.88046, 18.9736, 17.3762, 8.367, 14.7245, 5.71535, 18.6136, -6.12868, 19.1439, -8.78034, 14.5477, -18.6798, 17.5529, -27.8722, 2.88046, -7.01257, -7.54936 )

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="NotifyNetworkTimer" type="Timer" parent="."]
wait_time = 0.2
[connection signal="timeout" from="ShootingTimer" to="." method="_on_TimerShooting_timeout"]
[connection signal="timeout" from="NotifyNetworkTimer" to="." method="_on_NotifyNetworkTimer_timeout"]
